kubernetes/platform/kiali/app/components/route/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: kiali-console
spec:
  hostnames:
  - kiali.${CLUSTER_DOMAIN}
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: envoy-gateway
    namespace: envoy-gateway-system
  rules:
  - backendRefs:
     - name: kiali
       port: 20001
    matches:
    - path:
        type: PathPrefix
        value: /
